[package]
edition = "2021"
name    = "sd-cli"
version = "0.1.0"

[dependencies]
anyhow     = "1"
bincode    = "1.3.3"
chrono     = { version = "0.4", features = ["serde"] }
clap       = { version = "4", features = ["derive"] }
sd-core    = { path = "../../core" }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
tokio      = { version = "1", features = ["full"] }
uuid       = { version = "1", features = ["serde", "v4"] }
