[package]
edition = "2021"
name    = "sd-cli"
version = "0.1.0"

[dependencies]
anyhow      = "1"
bincode     = { version = "2.0.0-rc.3", features = ["serde"] }
chrono      = { version = "0.4", features = ["serde"] }
clap        = { version = "4", features = ["derive"] }
comfy-table = "7.1"
crossterm   = "0.27"
dirs        = "5.0"
indicatif   = "0.17"
inquire     = "0.7"
qr2term     = "0.3"
ratatui     = "0.26"
reqwest     = { version = "0.12", features = ["json"] }
sd-core     = { path = "../../core", features = ["cli"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
tokio       = { version = "1", features = ["full"] }
uuid        = { version = "1", features = ["serde", "v4"] }
