[package]
name = "gpui-photo-grid"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gpui-photo-grid"
path = "src/main.rs"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed", branch = "main" }
reqwest_client = { git = "https://github.com/zed-industries/zed", branch = "main" }
sd-client = { path = "../../crates/sd-client" }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
env_logger = "0.11"
