[package]
edition = "2021"
name    = "spacedrive-graphql"
version = "0.1.0"

[dependencies]
anyhow             = "1"
async-graphql      = "6"
async-graphql-axum = "6"
axum               = { version = "0.7", features = ["macros"] }
bincode            = "1"
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
tokio              = { version = "1", features = ["full"] }
uuid               = { version = "1", features = ["serde", "v4"] }

sd-core = { path = "../../core" }
