[package]
name = "sd-p2p-relay"
version = "0.0.1"
publish = false
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
hex.workspace = true
kafka = "0.10.0"
libp2p = { version = "0.53.2", features = [
	"tokio",
	"quic",
	"relay",
	"autonat",
	"macros",
] }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing.workspace = true
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { workspace = true, features = ["serde", "v4"] }
