[package]
name    = "sd-p2p-relay"
version = "0.0.1"

edition.workspace    = true
license.workspace    = true
publish              = false
repository.workspace = true

[dependencies]
# Workspace dependencies
libp2p = { version = "0.53.2", features = [
	"autonat",
	"macros",
	"quic",
	"relay",
	"tokio"
] } # Update blocked due to custom patch
reqwest = { workspace = true, features = ["json", "native-tls-vendored"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid = { workspace = true, features = ["serde", "v4"] }

# Specific P2P Relay dependencies
hex = "0.4.3"
