[package]
name = "sd-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1.40", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
regex = "1.10"
walkdir = "2.5"
indicatif = "0.17"
humantime-serde = "1.1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
uuid = { version = "1.11", features = ["v4", "serde"] }
tempfile = "3.14"
sd-core-new = { path = ".." }
serde_with = { version = "3.9", features = ["json"] }
async-trait = "0.1"

[lib]
name = "sd_bench"
path = "src/lib.rs"

[[bin]]
name = "sd-bench-new"
path = "src/bin/sd-bench-new.rs"


