[package]
edition = "2021"
name    = "sd-bench"
version = "0.1.0"

[dependencies]
anyhow             = "1.0"
async-trait        = "0.1"
blake3             = "1.5"
chrono             = { version = "0.4", features = ["serde"] }
clap               = { version = "4.5", features = ["derive", "env"] }
dirs               = "5.0"
humantime          = "2.1"
humantime-serde    = "1.1"
indicatif          = "0.17"
rand               = "0.8"
regex              = "1.10"
sd-core            = { path = ".." }
serde              = { version = "1.0", features = ["derive"] }
serde_json         = "1.0"
serde_with         = { version = "3.9", features = ["json"] }
serde_yaml         = "0.9"
sysinfo            = { version = "0.30", default-features = false, features = ["multithread"] }
tempfile           = "3.14"
tokio              = { version = "1.40", features = ["full"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid               = { version = "1.11", features = ["serde", "v4"] }
walkdir            = "2.5"

[lib]
name = "sd_bench"
path = "src/lib.rs"

[[bin]]
name = "sd-bench"
path = "src/bin/sd-bench-new.rs"
