[package]
name = "sd-p2p"
description = "Spacedrive peer to peer networking layer"
version = "0.1.0"
authors = ["Oscar Beaumont <oscar@otbeaumont.me>"]
edition = "2021"

[dependencies]
ctrlc = "3.2.2"
dashmap = "5.3.4"
futures-util = "0.3.21"
if-watch = "1.0.0"
mdns-sd = "0.5.0"
quinn = "0.8.3"
rcgen = "0.9.2"
ring = "0.16.20"
rustls = { version = "0.20.6", default-features = false, features = ["quic", "dangerous_configuration"] } # 'dangerous_configuration' is required to implement custom certificate verifiers which we use due to the self-signed nature of the protocol.
thiserror = "1.0.31"
tokio = { version = "1.19.0", features = ["rt-multi-thread", "macros", "sync"] }
lifesupport = { path = "../../apps/lifesupport" }
ureq = "2.4.0"
