[package]
name = "p2p"
version = "0.1.0"
edition = "2021"

[dependencies]
sd-tunnel-utils = { path = "../../apps/sdtunnel/utils" }

dashmap = "5.3.4"
rcgen = "0.9.2"
rustls = "0.20.6"
tokio = { version = "1.19.2", features = ["macros", "sync"] }
if-watch = "1.1.1"
thiserror = "1.0.31"
mdns-sd = { git = "https://github.com/keepsimple1/mdns-sd.git", branch = "multi-ip" }
quinn = "0.8.3"
futures-util = "0.3.21"
ts-rs = "6.2.0"
serde = { version = "1.0.138", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1.19.2", features = ["rt-multi-thread"] }
