[package]
name    = "sd-actors"
version = "0.1.0"

edition.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
async-channel    = { workspace = true }
async-trait      = { workspace = true }
futures          = { workspace = true }
pin-project-lite = { workspace = true }
tokio            = { workspace = true }
tracing          = { workspace = true }
