[package]
name    = "sd-ai"
version = "0.1.0"

authors                = ["Ericson Soares <ericson@spacedrive.com>"]
description            = "A simple library to generate video thumbnails using ffmpeg with the webp format"
edition.workspace      = true
license.workspace      = true
readme                 = "README.md"
repository.workspace   = true
rust-version.workspace = true

[dependencies]
# Inner Core Sub-crates
sd-core-file-path-helper = { path = "../../core/crates/file-path-helper" }
sd-core-prisma-helpers   = { path = "../../core/crates/prisma-helpers" }
sd-core-sync             = { path = "../../core/crates/sync" }

# Spacedrive Sub-crates
sd-prisma = { path = "../prisma" }
sd-sync   = { path = "../sync" }
sd-utils  = { path = "../utils" }

async-channel       = { workspace = true }
chrono              = { workspace = true, features = ["serde"] }
futures             = { workspace = true }
futures-concurrency = { workspace = true }
image               = { workspace = true }
prisma-client-rust  = { workspace = true }
reqwest             = { workspace = true, features = ["native-tls-vendored", "stream"] }
rmp-serde           = { workspace = true }
rmpv                = { workspace = true }
serde               = { workspace = true, features = ["derive"] }
thiserror           = { workspace = true }
tokio               = { workspace = true, features = ["fs"] }
tracing             = { workspace = true }
uuid                = { workspace = true, features = ["serde", "v4"] }

# Specific AI dependencies
# Note: half and ndarray version must be the same as used in ort
half    = { version = "2.4", features = ['num-traits'] }
ndarray = "0.15"
ort-sys = '=2.0.0-rc.0'                                  # lock sys crate to the same version as ort
url     = '2.5'

# Microsoft does not provide a release for osx-gpu. See: https://github.com/microsoft/onnxruntime/releases
# "gpu" means CUDA or TensorRT EP. Thus, the ort crate cannot download them at build time.
# Ref: https://github.com/pykeio/ort/blob/d7defd1862969b4b44f7f3f4b9c72263690bd67b/build.rs#L148
[target.'cfg(target_os = "windows")'.dependencies]
ort = { version = "=2.0.0-rc.0", default-features = false, features = [
	"directml",
	"half",
	"load-dynamic",
	"ndarray"
] }
[target.'cfg(target_os = "linux")'.dependencies]
ort = { version = "=2.0.0-rc.0", default-features = false, features = [
	"half",
	"ndarray",
	"xnnpack"
] }
# [target.'cfg(target_os = "android")'.dependencies]
# ort = { version = "=2.0.0-rc.0", default-features = false, features = [
# 	"half",
# 	"load-dynamic",
# 	"qnn",
# 	"nnapi",
# 	"xnnpack",
# 	"acl",
# 	"armnn",
# ] }
[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
ort = { version = "=2.0.0-rc.0", features = [
	"coreml",
	"half",
	"load-dynamic",
	"ndarray",
	"xnnpack"
] }
