[package]
name = "sd-android-fs-watcher"
version = "0.1.0"
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror = "1.0.50"
uuid.workspace = true
rspc = { workspace = true }
specta.workspace = true
base64.workspace = true
tracing.workspace = true
inotify = "0.10.2"
tokio.workspace = true
