[package]
name = "sd-cloud-api"
version = "0.1.0"
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
# Spacedrive Sub-crates
sd-p2p = { path = "../p2p" }

base64 = { workspace = true }
rmpv = { workspace = true }
rspc = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
specta = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

reqwest = "0.11.22"
