[package]
name    = "sd-cloud-api"
version = "0.1.0"

edition.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
# Spacedrive Sub-crates
sd-p2p = { path = "../p2p" }

# Workspace dependencies
reqwest    = { workspace = true, features = ["native-tls-vendored"] }
rspc       = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
specta     = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }
uuid       = { workspace = true }
