[package]
name = "crypto-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
sd-crypto = { path = "../crypto", features = ["serde"] }
anyhow = "1.0.68"
hex = "0.4.3"
