[package]
name = "crypto-cli"
version = "0.0.0"
edition = "2021"
authors = ["Jake Robinson <jake@spacedrive.com>"]
description = "A CLI tool to view encrypted file details (for files encrypted with Spacedrive)"
rust-version = "1.64.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
sd-crypto = { path = "../crypto", features = ["serde"] }
anyhow = "1.0.68"
hex = "0.4.3"
