[package]
name    = "sd-crypto"
version = "0.0.1"

authors = ["Ericson Soares <ericson@spacedrive.com>", "Jake Robinson <jake@spacedrive.com>"]
description = """
A cryptographic library that provides safe and high-level
encryption, hashing, and encoding interfaces.
"""

edition.workspace      = true
keywords               = ["crypto"]
license.workspace      = true
readme                 = "README.md"
repository.workspace   = true
rust-version.workspace = true

[dependencies]
# Workspace dependencies
async-stream = { workspace = true }
blake3       = { workspace = true }
futures      = { workspace = true }
serde        = { workspace = true, features = ["derive"] }
thiserror    = { workspace = true }
tokio        = { workspace = true, features = ["io-util", "macros", "rt-multi-thread", "sync"] }

# External dependencies
aead             = { version = "0.6.0-rc.0", default-features = false, features = ["stream"] }
chacha20poly1305 = "0.11.0-pre.1"
cmov             = "0.3.1"
# Some deps use this same version, so we just use it too
generic-array   = { version = "=0.14.7", features = ["serde", "zeroize"] }
hex             = "0.4.3"
rand            = "0.9.0-alpha.2"
rand_chacha     = "0.9.0-alpha.2"
rand_core       = "0.9.0-alpha.2"
serde-big-array = "0.5.1"
serdect         = "0.3.0-pre.0"
typenum         = "1.17.0"
zeroize         = { version = "1.7.0", features = ["aarch64", "derive"] }

[dev-dependencies]
paste    = "1.0.14"
tempfile = "3.10.1"

[[example]]
name = "secure_erase"
path = "examples/secure_erase.rs"
