[package]
name = "deps-generator"
version = "0.0.0"
edition = "2021"
authors = ["Jake Robinson <jake@spacedrive.com>"]
description = "A tool to compile all Spacedrive dependencies and their respective licenses"

[dependencies]
reqwest = { version = "0.11.16", features = ["blocking"] }
clap = { version = "4.2.4", features = ["derive"] }
anyhow = "1.0.70"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cargo_metadata = "0.15.4"
