[package]
name = "deps-generator"
version = "0.0.0"
authors = ["Jake Robinson <jake@spacedrive.com>"]
description = "A tool to compile all Spacedrive dependencies and their respective licenses"
license = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

[dependencies]
reqwest = { version = "0.11.20", features = ["blocking"] }
clap = { version = "4.4.2", features = ["derive"] }
anyhow = "1.0.75"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cargo_metadata = "0.18.0"
