[package]
name = "sd-ffmpeg"
version = "0.1.0"
authors = ["Ericson Soares <ericson.ds999@gmail.com>"]
readme = "README.md"
description = "A simple library to generate video thumbnails using ffmpeg with the webp format"
rust-version = "1.77"
license = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

[dependencies]
chrono = { workspace = true }
image = { workspace = true }
libc = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "rt"] }
tracing = { workspace = true }
webp = { workspace = true }

ffmpeg-sys-next = "6.0.1"

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["fs", "rt", "macros"] }
