[package]
name = "sd-ffmpeg"
version = "0.1.0"
authors = [
	"Ericson Soares <ericson@spacedrive.com>",
	"Vítor Vasconcellos <vitor@spacedrive.com>",
]
readme = "README.md"
description = "A simple library to generate video thumbnails using ffmpeg with the webp format"
rust-version = "1.78"
license = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

[dependencies]
# Spacedrive Sub-crates
sd-utils = { path = "../utils" }

# Workspace dependencies
chrono = { workspace = true, features = ["serde"] }
image = { workspace = true }
libc = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "rt"] }
tracing = { workspace = true }
webp = { workspace = true }

# Specific FFmpeg dependencies
ffmpeg-sys-next = "7.0"

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["fs", "rt", "macros"] }
