[package]
name    = "sd-ffmpeg"
version = "0.1.0"

authors                = ["Ericson Soares <ericson@spacedrive.com>", "Vítor Vasconcellos <vitor@spacedrive.com>"]
description            = "A simple library to generate video thumbnails using ffmpeg with the webp format"
edition.workspace      = true
license.workspace      = true
readme                 = "README.md"
repository.workspace   = true
rust-version.workspace = true

[dependencies]
# Spacedrive Sub-crates
sd-utils = { path = "../utils" }

# Workspace dependencies
chrono    = { workspace = true, features = ["serde"] }
image     = { workspace = true }
libc      = { workspace = true }
thiserror = { workspace = true }
tokio     = { workspace = true, features = ["fs", "rt"] }
tracing   = { workspace = true }
webp      = { workspace = true }

# Specific FFmpeg dependencies
ffmpeg-sys-next = "7.0"

[dev-dependencies]
tempfile = { workspace = true }
tokio    = { workspace = true, features = ["fs", "macros", "rt"] }
