[package]
name = "sd-file-ext"
version = "0.0.0"
authors = [
	"Brendan Allen <brendan@spacedrive.com>",
	"Jamie Pine <jamie@spacedrive.com>",
]
license = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

[dependencies]
serde = { version = "1.0.190", features = ["derive"] }
serde_json = { workspace = true }
strum = { version = "0.25", features = ["derive"] }
strum_macros = "0.25"
tokio = { workspace = true, features = ["fs", "rt", "io-util"] }
specta = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["fs", "rt", "macros"] }
