[package]
name = "sd-file-path-helper"
version = "0.1.0"
authors = ["Ericson Soares <ericson@spacedrive.com>"]
readme = "README.md"
rust-version = "1.73.0"
license = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

[dependencies]
sd-prisma = { path = "../prisma" }
sd-utils = { path = "../utils" }

chrono = { workspace = true, features = ["serde"] }
prisma-client-rust = { workspace = true }
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
tracing = { workspace = true }

[target.'cfg(windows)'.dependencies.winapi-util]
version = "0.1.6"
